# emuchip

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.emuchip-qt  Makefile.emuchip-sdl  README  README.md  emuchip.pro
src/: chip8_emu.cpp  chip8_emu.h  chip_emu.cpp  chip_emu.h  displayfield.cpp  displayfield.h  mainwindow.cpp  mainwindow.h  version.h.cmake  version.h.in
src/qt/: displaywidget.cpp  displaywidget.h  main.cpp  mainwindow.cpp  mainwindow.h
src/sdl/: main.cpp
